<resources>
    <string name="app_name">PlanIt</string>
    <string name="new_task_btn">Create</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings_title">Settings</string>
    <string name="theme_title">Night theme</string>
    <string name="help_title">Help</string>
    <string name="privacy_policy_text">Privacy policy</string>
    <string name="creating_a_new_task_title">Creating a new task</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="set_the_priority">Set the priority</string>
    <string name="create_btn">Create</string>
    <string name="main_start_text">You don\'t have any tasks yet. Create using the bottom button</string>
    <string name="statistics_title">Statistics</string>
    <string name="blue_btn">Blue</string>
    <string name="green_btn">Green</string>
    <string name="yellow_btn">Yellow</string>
    <string name="red_btn">Red</string>
    <string name="statistics_activity_title">Statistics</string>
    <string name="using_colors_text">Using colors</string>
    <string name="task_completion_text">Task completion</string>
    <string name="the_busiest_day_text">The busiest day</string>
    <string name="priority_by_tasks_text">Priority by tasks</string>
    <string name="description_task_text">Description</string>
    <string name="version_text" translatable="false">PlanIt for android v1.0</string>
    <string name="completed_text">Completed</string>
    <string name="unfulfilled_text">Unfulfilled</string>
    <string name="no_information_text">No information</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
</resources>