<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/frag_new_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <View
            android:layout_width="100dp"
            android:layout_height="6dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_rect"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creating_a_new_task_title"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textColorHint="@color/gray"
            android:hint="@string/enter_the_title"
            android:background="@drawable/rounded_edittext_bg"
            android:padding="10dp"
            android:inputType="textCapSentences"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:maxLength="30"/>

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_the_priority"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imageButtonPriority1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/star"
                android:backgroundTint="@color/blue"
                android:foreground="?attr/selectableItemBackground"/>
            <ImageButton
                android:id="@+id/imageButtonPriority2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/star_outline"
                android:backgroundTint="@color/blue"
                android:layout_marginHorizontal="20dp"
                android:foreground="?attr/selectableItemBackground"/>
            <ImageButton
                android:id="@+id/imageButtonPriority3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/star_outline"
                android:backgroundTint="@color/blue"
                android:foreground="?attr/selectableItemBackground"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_disc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textColorHint="@color/gray"
            android:hint="@string/enter_the_description"
            android:background="@drawable/rounded_edittext_bg"
            android:padding="10dp"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="1"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <!-- Выбор цвета задачи через RadioButton -->
        <RadioGroup
            android:id="@+id/radioGroupColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButtonBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:buttonTint="@color/blue"
                android:layout_marginEnd="10dp"
                android:text="@string/blue_btn" />

            <RadioButton
                android:id="@+id/radioButtonGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:layout_marginEnd="10dp"
                android:text="@string/green_btn" />

            <RadioButton
                android:id="@+id/radioButtonYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:layout_marginEnd="10dp"
                android:text="@string/yellow_btn" />

            <RadioButton
                android:id="@+id/radioButtonRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"
                android:text="@string/red_btn" />
        </RadioGroup>

        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:paddingHorizontal="22dp"
            android:paddingVertical="12dp"
            android:text="@string/create_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>