<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/theme_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/settings_title"
            android:layout_marginVertical="20dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/rounded_rect"
                android:backgroundTint="?attr/colorContainer"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/theme_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_title"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    app:thumbTint="@color/blue"
                    app:trackTint="@drawable/track_color"/>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/help_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/theme_group"
            android:layout_marginVertical="20dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/rounded_rect"
                android:backgroundTint="?attr/colorContainer"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/help_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_title"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:text="FAQ"
                    android:gravity="center_vertical|start"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/round_info"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white"
                    android:text="@string/privacy_policy_text"
                    android:gravity="center_vertical|start"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/round_verified_user"/>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/vers_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/help_group"
            android:layout_marginVertical="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="parent"
                android:gravity="center"
                android:text="@string/version_text"
                android:textColor="?attr/colorPrimaryVariant"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
